<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RestaurantRatingAppActivity!</string>
    <string name="app_name">APP TITLE</string>
    <string name="hours_ago">HOURS AGO</string>
    <string name="days_ago">DAYS AGO</string>
    <string name="weeks_ago">WEEKS AGO</string>
    <string name="months_ago">MONTHS AGO</string>
    <string name="reviews">REV</string>
    <string name="distance">m</string>
    <string name="places_nearby">places nearby</string>
    <string name="tips">USER TIPS</string>
    <string name="photos">USER PHOTOS</string>
    <string name="tip_food">FOOD</string>
    <string name="tip_ambient">AMBIENT</string>
    <string name="tip_service">SERVICE</string>
    <string name="tip_value">VALUE</string>
    <string name="rate_title">RATE IT LIKE A POLAROID PICTURE!</string>
    <string name="rate_values_title">THANK YOU! INACTIVE ICONS!</string>
    <string name="tips_title">TIPS</string>
    <string name="photos_title">PHOTOS</string>
    <string name="photos_small">PHOTOS</string>
    <string name="of">of</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="friends">Friends</string>
    <string name="rate_food">Rate food</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="location">Location</string>
    <string name="added">Added</string>
    <string name="days_ago_by">days ago by</string>
    <string name="places">Places</string>
    <string name="leave_tip">Leave tip</string>
    <string name="rate_count">REVIEWS</string>
    <string name="avg_rate">AVERIGE RATE</string>
    
	<string name="location_error">Lokacijo ni možno določiti. Preverite če imate prižgan GPS.</string> 
	<string name="location_title">Določanje lokacije</string> 
    
    <string name="loading">Nalaganje...</string>
	<string name="json_error">Nepravilen odgovor strežnika</string> 
	<string name="json_title">Povezava na strežnik</string> 
	<string name="conn_error">Ni internetne povezave</string> 
	<string name="conn_title">Internetna povezava</string> 
	<string name="no_camera">Ni kamere</string> 
	<string name="camera_error">Napaka na kameri</string> 
	<string name="please_wait">Please wait</string> 
	<string name="retriving_data">Retriving data</string> 
	<string name="uploading_photo">Uploading photo</string> 
	<string name="oauth_requered">Brez autorizacije ni mozno dodajanje tipov</string> 
					
	
    <string name="msg_text">Tekst sporočila</string>
    <string name="msg_body">Sporočilo</string>
    
</resources>