<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:restaurantrating="http://schemas.android.com/apk/res/si.kubit.restaurantrating"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <si.kubit.restaurantrating.components.TitleFrameLayout
        android:id="@+id/frame_restaurant_rate"
        android:layout_width="fill_parent" 
		style="@style/AppTitleLayout" 
	    android:orientation="horizontal">

       <Button android:id="@+id/button_back"
            android:background="@drawable/cancel"
    		style="@style/TextUser.Small.AppTitleButtonLeft"
		    android:text="@string/places" />

		<si.kubit.restaurantrating.components.TextViewFont 
	        android:id="@+id/text_restaurnt_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:includeFontPadding="false"
	        restaurantrating:font_name="@string/font_big_text"
	        style="@style/AppTitle" />

		<Button android:id="@+id/button_map"
            android:background="@drawable/map"
    		style="@style/AppTitleButtonMap"   />
	 </si.kubit.restaurantrating.components.TitleFrameLayout>        
         	   

    
    <LinearLayout android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
		android:orientation="horizontal">
    
	    <ListView android:id="@+id/android:list"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
	          android:layout_weight="1"
	          android:drawSelectorOnTop="false"
	          android:textFilterEnabled="true"
	          android:fadingEdge="none">
		 </ListView>	 
	</LinearLayout>    

    
    <LinearLayout android:layout_width="fill_parent" 
     	android:gravity="left" 
     	android:layout_height="fill_parent"
		android:orientation="vertical"
		android:layout_weight="10"
		style="@style/LayoutDefaultLight" >

	    <si.kubit.restaurantrating.components.TextViewFont
	        android:id="@+id/text_restaurant_rate_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        restaurantrating:font_name="@string/font_list_small"
	        style="@style/TextUserUnder.Blue"
	        android:layout_weight="0"
	        android:paddingTop="10dip"
	        android:paddingLeft="10dip"/>
	    
	    <si.kubit.restaurantrating.components.RestaurantRateItemLayout 
        	  android:id="@+id/layout_rate_food"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
	    	  restaurantrating:rate_item_text="@string/tip_food"
	    	  restaurantrating:color_fill="@color/firstListColor"
        	  restaurantrating:color_stroke="@color/foodRateColor"
        	  restaurantrating:color_default="@color/backgroundColor"
        	  restaurantrating:stroke_width="4"
        	  restaurantrating:width="54"
        	  restaurantrating:height="54"
	    	  android:layout_weight="1" />
	    	    
	    <si.kubit.restaurantrating.components.RestaurantRateItemLayout 
        	  android:id="@+id/layout_rate_ambient"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
	    	  restaurantrating:rate_item_text="@string/tip_ambient"
	    	  restaurantrating:color_fill="@color/firstListColor"
        	  restaurantrating:color_stroke="@color/ambientRateColor"
        	  restaurantrating:stroke_width="4"
        	  restaurantrating:width="54"
        	  restaurantrating:height="54"
	    	  android:layout_weight="1" />


	    <si.kubit.restaurantrating.components.RestaurantRateItemLayout 
        	  android:id="@+id/layout_rate_service"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
	    	  restaurantrating:rate_item_text="@string/tip_service"
	    	  restaurantrating:color_fill="@color/firstListColor"
        	  restaurantrating:color_stroke="@color/serviceRateColor"
        	  restaurantrating:stroke_width="4"
        	  restaurantrating:width="54"
        	  restaurantrating:height="54"
	    	  android:layout_weight="1" />


	    <si.kubit.restaurantrating.components.RestaurantRateItemLayout 
        	  android:id="@+id/layout_rate_value"
        	  android:layout_width="wrap_content"
        	  android:layout_height="wrap_content"
	    	  restaurantrating:rate_item_text="@string/tip_value"
	    	  restaurantrating:color_fill="@color/firstListColor"
        	  restaurantrating:color_stroke="@color/valueRateColor"
        	  restaurantrating:stroke_width="4"
        	  restaurantrating:width="54"
        	  restaurantrating:height="54"
	    	  android:layout_weight="1" />
	    
        	    
    </LinearLayout>	     
    
    <si.kubit.restaurantrating.components.RoundedFrameLayout
        	android:id="@+id/layout_tips_photos"
        	android:layout_width="fill_parent" 
	     	android:gravity="center" 
		   	android:layout_height="wrap_content"
			android:orientation="horizontal"
			style="@style/LayoutDefaultLight"
	        restaurantrating:radii="0, 0, 0, 0, 15, 15, 15, 15"
	        restaurantrating:color_fill="@color/white"
	        restaurantrating:color_stroke="@color/translucentWhite"
			android:paddingBottom="40px">
	    
		<si.kubit.restaurantrating.components.TextViewFont
	        android:background="@drawable/user_tips"
    		restaurantrating:font_name="@string/font_list_small"
	        style="@style/TextUserUnder.Blue.Left"
	        android:id="@+id/button_tips"/>

		<si.kubit.restaurantrating.components.TextViewFont
	        android:background="@drawable/user_photos"
    		android:id="@+id/button_photos"
            restaurantrating:font_name="@string/font_list_small"
	        style="@style/TextUserUnder.Blue.Left.Right"/>			    
    </si.kubit.restaurantrating.components.RoundedFrameLayout>	        
 
   	<include android:id="@+id/layout_menu_footer" layout="@layout/footer" />
   	<include android:id="@+id/layout_menu_rate_food" layout="@layout/rate_food" />

</LinearLayout>